--- a/apollo-adminservice/apollo-adminservice-compose.yml
+++ b/apollo-adminservice/apollo-adminservice-compose.yml
@@ -12,4 +12,5 @@ services:
       - spring_datasource_url=jdbc:mysql://xxx:8306/ApolloConfigDB_TEST?characterEncoding=utf8
       - spring_datasource_username=root
       - spring_datasource_password=xxx@mysql2019*
+      - eureka.instance.ip-address=172.11.11.11
     restart: always
