--- a/apollo-portal/apollo-portal-compose.yml
+++ b/apollo-portal/apollo-portal-compose.yml
@@ -13,5 +13,6 @@ services:
       - spring_datasource_url=jdbc:mysql://47.94.211.209:8306/ApolloPortalDB?characterEncoding=utf8
       - spring_datasource_username=root
       - spring_datasource_password=Tusdao@mysql2019*
+      - eureka.instance.ip-address=
 
     restart: always
