--- a/apollo-compose-ext-portal.yml
+++ b/apollo-compose-ext-portal.yml
@@ -9,10 +9,10 @@ services:
     volumes:
       - "/docker/apollo/logs/100003171:/opt/logs/100003171"
     environment:
-      - spring_datasource_url=jdbc:mysql://47.xx.xx.209:8306/ApolloConfigDB_TEST?characterEncoding=utf8
-      - spring_datasource_username=root
-      - spring_datasource_password=Tusdao@xx*
-      - eureka.instance.ip-address=172.11.11.11
+      - spring_datasource_url=jdbc:mysql://47.xx.xx.xx:8306/ApolloConfigDB_TEST?characterEncoding=utf8
+      - spring_datasource_username=xxx
+      - spring_datasource_password=xxx@xx*
+      - eureka.instance.ip-address=172.11.11.xx
     restart: always
 
   apollo-adminservice:
@@ -24,10 +24,10 @@ services:
     volumes:
       - "/docker/apollo/logs/100003172:/opt/logs/100003172"
     environment:
-      - spring_datasource_url=jdbc:mysql://47.xx.xx.209:8306/ApolloConfigDB_TEST?characterEncoding=utf8
-      - spring_datasource_username=root
-      - spring_datasource_password=Tusdao@xx*
-      - eureka.instance.ip-address=172.11.11.11
+      - spring_datasource_url=jdbc:mysql://47.xx.xx.xxx:8306/ApolloConfigDB_TEST?characterEncoding=utf8
+      - spring_datasource_username=xxx
+      - spring_datasource_password=xxx
+      - eureka.instance.ip-address=172.11.11.xx
     depends_on:
       - apollo-configservice
 
