--- a/apollo-adminservice/apollo-adminservice-compose.yml
+++ b/apollo-adminservice/apollo-adminservice-compose.yml
@@ -10,7 +10,7 @@ services:
       - "/docker/apollo/logs/100003172:/opt/logs/100003172"
     environment:
       - spring_datasource_url=jdbc:mysql://xxx:8306/ApolloConfigDB_TEST?characterEncoding=utf8
-      - spring_datasource_username=root
-      - spring_datasource_password=xxx@mysql2019*
-      - eureka.instance.ip-address=172.11.11.11
+      - spring_datasource_username=xxx
+      - spring_datasource_password=xxx
+      - eureka.instance.ip-address=172.11.11.xx
     restart: always
