--- a/apollo-configservice/apollo-configservice-compose.yml
+++ b/apollo-configservice/apollo-configservice-compose.yml
@@ -9,9 +9,9 @@ services:
     volumes:
       - "/docker/apollo/logs/100003171:/opt/logs/100003171"
     environment:
-      - spring_datasource_url=jdbc:mysql://47.94.211.209:8306/ApolloConfigDB_TEST?characterEncoding=utf8
-      - spring_datasource_username=root
-      - spring_datasource_password=Tusdao@mysql2019*
-      - eureka.instance.ip-address=172.11.11.11
+      - spring_datasource_url=jdbc:mysql://xx.xx.xxx.xxx:8306/ApolloConfigDB_TEST?characterEncoding=utf8
+      - spring_datasource_username=xxx
+      - spring_datasource_password=xxx*
+      - eureka.instance.ip-address=172.11.11.xx
 
     restart: always
